--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,10 @@
 name: Build Release
 
 on: 
-  workflow_dispatch:
+  push:
+    branches: ['main']
+    paths:
+      - Packages/com.talox.sdfui/package.json
 
 jobs:
 
